--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+def BUILD_NUMBER = System.getenv("BUILD_NUMBER") ?: "0"
+def MAVEN_REPO = System.getenv("MAVEN_REPO") ?: ""
+def MAVEN_USERNAME = System.getenv("MAVEN_USERNAME") ?: ""
+def MAVEN_PASSWORD = System.getenv("MAVEN_PASSWORD") ?: ""
+
 buildscript {
     repositories {
         mavenCentral()
@@ -16,8 +21,9 @@ buildscript {
 }
 
 apply plugin: 'forge'
+apply plugin: 'maven'
 
-version = "1.0.0"
+version = "1.0." + BUILD_NUMBER
 group = "net.blay09.mods" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "tcinventoryscan"
 
@@ -57,3 +63,48 @@ processResources
         exclude 'mcmod.info'
     }
 }
+
+jar {
+    appendix "mc" + minecraft.version
+}
+
+task jarDev(type: Jar) {
+    from sourceSets.main.output
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    classifier "dev"
+    appendix "mc" + minecraft.version
+}
+
+artifacts {
+    archives jarDev
+}
+
+uploadArchives {
+    dependsOn 'reobf'
+    repositories {
+        mavenDeployer {
+            repository(url: MAVEN_REPO) {
+                authentication(userName: MAVEN_USERNAME, password: MAVEN_PASSWORD)
+            }
+
+            pom {
+                groupId = project.group
+                version = project.version
+                artifactId = project.archivesBaseName
+            }
+
+            pom.withXml {
+                asNode().dependencies.dependency.findAll {
+                    it.scope.text() == "compile"
+                }.each {
+                    if(it.optional)
+                        it.optional.value = 'true'
+                    else
+                        it.appendNode('optional', 'true');
+                }
+            }
+        }
+    }
+}
+
