--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,10 @@ processResources
 
 jar {
     appendix "mc" + minecraft.version
+
+    manifest {
+        attributes("FMLAT": "tcinventoryscan_at.cfg")
+    }
 }
 
 task jarDev(type: Jar) {
