--- a/src/main/resources/META-INF/tcinventoryscan_at.cfg
+++ b/src/main/resources/META-INF/tcinventoryscan_at.cfg
@@ -2,3 +2,5 @@ public net.minecraft.client.gui.inventory.GuiContainer func_146975_c(II)Lnet/min
 public net.minecraft.client.gui.GuiScreen func_146285_a(Lnet/minecraft/item/ItemStack;II)V # renderTooltip
 public net.minecraft.client.gui.Gui field_73735_i # zLevel
 public net.minecraft.client.gui.inventory.GuiContainerCreative func_146285_a(Lnet/minecraft/item/ItemStack;II)V # renderTooltip
+public net.minecraft.client.gui.inventory.GuiContainer field_147003_i # guiLeft
+public net.minecraft.client.gui.inventory.GuiContainer field_147009_r # guiTop
