--- a/build.gradle
+++ b/build.gradle
@@ -1,113 +1,52 @@
-def BUILD_NUMBER = System.getenv("BUILD_NUMBER") ?: "0"
-def MAVEN_REPO = System.getenv("MAVEN_REPO") ?: ""
-def MAVEN_USERNAME = System.getenv("MAVEN_USERNAME") ?: ""
-def MAVEN_PASSWORD = System.getenv("MAVEN_PASSWORD") ?: ""
-
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
+apply plugin: 'net.minecraftforge.gradle.forge'
 
-apply plugin: 'forge'
-apply plugin: 'maven'
+apply from: 'gradle/scripts/common.gradle'
+apply from: 'gradle/scripts/with-at.gradle'
+apply from: 'gradle/scripts/with-api.gradle'
 
-version = "1.0." + BUILD_NUMBER
+apply from: 'dependencies.gradle'
+
+def BUILD_NUMBER = System.getenv("BUILD_NUMBER") ?: "0"
+
+sourceCompatibility = targetCompatibility = '1.8'
+compileJava {
+    sourceCompatibility = targetCompatibility = '1.8'
+}
+
+version = major_version + "." + minor_version + "." + BUILD_NUMBER
 group = "net.blay09.mods"
-archivesBaseName = "tcinventoryscan"
+archivesBaseName = mod_name + "_" + minecraft_version
 
 minecraft {
-    version = "1.7.10-10.13.4.1566-1.7.10"
-    runDir = "eclipse"
+    version = minecraft_version + "-" + forge_version
+    runDir = "run"
+    useDepAts = true
+    mappings = mappings_version
 }
 
-repositories {
-    ivy {
-        name "Thaumcraft 4"
-        artifactPattern "https://dl.dropboxusercontent.com/u/47135879/[module]-[classifier]-[revision].[ext]"
-    }
-}
-
-dependencies {
-    compile name: 'Thaumcraft', version: '1.7.10-4.2.3.5', classifier: 'deobf', ext: 'jar'
-    compile name: 'Baubles', version: '1.7.10-1.0.1.10', classifier: 'deobf', ext: 'jar'
-}
-
-processResources
-{
-    // this will ensure that this task is redone when the versions change.
+processResources{
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
 
-    // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
                 
-        // replace version and mcversion
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
         
-    // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
 }
-
-jar {
-    appendix "mc" + minecraft.version
-
-    manifest {
-        attributes("FMLAT": "tcinventoryscan_at.cfg")
-    }
-}
-
-task jarDev(type: Jar) {
-    from sourceSets.main.output
-
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    classifier "dev"
-    appendix "mc" + minecraft.version
-}
-
-artifacts {
-    archives jarDev
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: MAVEN_REPO) {
-                authentication(userName: MAVEN_USERNAME, password: MAVEN_PASSWORD)
-            }
-
-            pom {
-                groupId = project.group
-                version = project.version
-                artifactId = project.archivesBaseName
-            }
-
-            pom.withXml {
-                asNode().dependencies.dependency.findAll {
-                    it.scope.text() == "compile"
-                }.each {
-                    if(it.optional)
-                        it.optional.value = 'true'
-                    else
-                        it.appendNode('optional', 'true');
-                }
-            }
-        }
-    }
-}
-
